--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
                 </figcaption>
             </figure>
             <figure class="carousel-item">
-                <div class="row d-flex align-items-center contact-info">
-                    <h4 class="my-3 text-center">Contact information <strong>to book a room</strong> or <strong>for
-                            further
-                            enquiries</strong>:</h4>
+                <img src="./assets/contact.jpg" alt="Picking up a telephone">
+                <figcaption class="carousel-caption row d-flex align-items-center contact-info">
+                    <h4 class="my-3 text-center">
+                        Contact information <strong>to book a room</strong> or <strong>
+                            for further enquiries</strong>:</h4>
                     <div class="row mb-4">
                         <div class="col text-center mb-4">
                             <h5>Contact #1</h5>
@@ -121,7 +122,7 @@
                             View Location here
                         </button>
                     </div>
-                </div>
+                </figcaption>
             </figure>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
